# guessme

./: .gitignore  CLAUDE.md  Justfile  README.md  Tiltfile  index.html  main.py  pyproject.toml
.github/workflows/: build-push.yaml  ci.yaml  frontend-test.yml
backend/: .dockerignore  Dockerfile  Justfile  main.py  pyproject.toml
backend/predictor/: actor.py
backend/src/guessme/: __init__.py  main.py
backend/src/guessme/api/: app.py  schemas.py
backend/src/guessme/model/: .gitignore  __init__.py  cnn.py  preprocess.py  train.py
backend/src/guessme/model/weights/: mnist_cnn.pt.dvc
backend/src/guessme/predictor/: __init__.py  deployment.py
backend/tests/: __init__.py  conftest.py  test_messages.py  test_predictor.py  test_websocket.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_cnn.py  test_predictor.py  test_preprocess.py  test_train.py
backend/websocket/: handler.py  messages.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vitest.config.ts
frontend/e2e/: draw-predict.spec.ts
frontend/src/: App.vue  SimpleApp.vue  main.ts  test-setup.ts
frontend/src/components/: DrawingCanvas.test.ts  DrawingCanvas.vue  (+12 more)
k8s/: backend-deployment.yaml  deployment.yaml  frontend-deployment.yaml  guessme-rayservice.yaml  kustomization.yaml  namespace.yaml  rayservice.yaml  service.yaml
mock-server/: package.json  pnpm-lock.yaml  server.ts
plan/: design.md  epic1_local_k8s_ray_poc.md  epic_fastapi_ray_backend.md  epic_frontend_with_mock_server.md  epics.md  style-guide.md
(+27 files in other folders)
