[project]
name = "guessme"
version = "0.1.0"
description = "AI-powered draw guessing game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "ray[serve]>=2.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.14.8",
]
